--- a/CSG_ADMINPRO.UI/appsettings.json
+++ b/CSG_ADMINPRO.UI/appsettings.json
@@ -24,6 +24,12 @@
     "EditAsegurada": "sp_Edit_Asegurado",
     "DeleteAsegurada": "sp_Delete_Asegurado",
     "GetByIdAsegurada": "sp_GetById_Asegurado",
-    "GetAllAsegurada": "sp_GetAll_Asegurado"
+    "GetAllAsegurada": "sp_GetAll_Asegurado",
+    "GetAllUsuario": "sp_GetAll_Usuario",
+    "GetByIdUsuario": "sp_GetById_Usuario",
+    "AddUsuario": "sp_Add_Usuario",
+    "EditUsuario": "sp_Edit_Usuario",
+    "DeleteUsuario": "sp_Delete_Usuario",
+    "GetAllEstado": "sp_GetAll_Estado"
   }
 }
