--- a/CSG_ADMINPRO.API/CSG_ADMINPRO.API.csproj
+++ b/CSG_ADMINPRO.API/CSG_ADMINPRO.API.csproj
@@ -4,17 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="SeriLog" Version="4.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CSG_ADMINPRO.APLICATION\CSG_ADMINPRO.APLICATION.csproj" />
-    <ProjectReference Include="..\CSG_ADMINPRO.DATA\CSG_ADMINPRO.DATA.csproj" />
   </ItemGroup>
 
 </Project>
