--- a/CSG_ADMINPRO.APLICATION/CSG_ADMINPRO.APLICATION.csproj
+++ b/CSG_ADMINPRO.APLICATION/CSG_ADMINPRO.APLICATION.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CSG_ADMINPRO.DATA\CSG_ADMINPRO.DATA.csproj" />
     <ProjectReference Include="..\CSG_ADMINPRO.DOMAIN\CSG_ADMINPRO.DOMAIN.csproj" />
+    <ProjectReference Include="..\CSG_AMINPRO.UI.ADMIN\CSG_AMINPRO.UI.ADMIN.csproj" />
   </ItemGroup>
 
 </Project>
