API para citas completada

--- a/CSG_ADMINPRO.API/appsettings.json
+++ b/CSG_ADMINPRO.API/appsettings.json
@@ -30,6 +30,11 @@
     "AddUsuario": "sp_Add_Usuario",
     "EditUsuario": "sp_Edit_Usuario",
     "DeleteUsuario": "sp_Delete_Usuario",
-    "GetAllEstado": "sp_GetAll_Estado"
+    "GetAllEstado": "sp_GetAll_Estado",
+    "GetAllCita": "sp_GetAll_Cita",
+    "AddCita": "sp_Add_Cita",
+    "EditCita": "sp_Edit_Cita",
+    "DeleteCita": "sp_Delete_Cita",
+    "GetByIdCita":  "sp_GetById_Cita"
   }
 }
