Confg https lap2k25

--- a/CSG_ADMINPRO.UI/appsettings.json
+++ b/CSG_ADMINPRO.UI/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "db": "data source=DESKTOP-KHL9FRV\\SQLEXPRESS;initial catalog=Consultorio_Seguros;trustservercertificate=true;trusted_connection=true;integrated security=true"
-  },
+    "ConnectionStrings": {
+        "db": "data source=HECUREYESF;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=sa;password=Reyes09032003"    },
   "StoredProcedures": {
     "AddSeguro": "sp_Add_Seguro",
     "EditSeguro": "sp_Edit_Seguro",
