--- a/CSG_ADMINPRO.UI/appsettings.json
+++ b/CSG_ADMINPRO.UI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-        "db": "data source=HECUREYESF;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=sa;password=Reyes09032003"    },
+        "db": "data source=HECUREYESF;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=sa;password=d$vfr$y3xmmix"
+    },
   "StoredProcedures": {
     "AddSeguro": "sp_Add_Seguro",
     "EditSeguro": "sp_Edit_Seguro",
