--- a/CSG_ADMINPRO.API/appsettings.json
+++ b/CSG_ADMINPRO.API/appsettings.json
@@ -36,6 +36,7 @@
         "EditCita": "sp_Edit_Cita",
         "DeleteCita": "sp_Delete_Cita",
         "GetByIdCita": "sp_GetById_Cita",
-        "GetAllServicio": "sp_GetAll_Servicio"
+        "GetAllServicio": "sp_GetAll_Servicio",
+        "GetByIdServicio": "sp_GetById_Servicio"
     }
 }
