Cambios generales de CSG_ADMINPRO

--- a/CSG_ADMINPRO.API/appsettings.json
+++ b/CSG_ADMINPRO.API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "db": "data source=HECUREYESF;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=sa;password=d$vfr$y3xmmix"
-    },
+  "ConnectionStrings": {
+    "db": "data source=FREYES\\SQLEXPRESS;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=devfreyes;password=d$vfr$y3x.mmix"
+  },
     "StoredProcedures": {
         "AddSeguro": "sp_Add_Seguro",
         "EditSeguro": "sp_Edit_Seguro",
