--- a/CSG_ADMINPRO.UI/appsettings.json
+++ b/CSG_ADMINPRO.UI/appsettings.json
@@ -6,30 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "db": "data source=HECUREYESF;initial catalog=Consultorio_Seguros;trustservercertificate=true;user id=sa;password=d$vfr$y3xmmix"
-    },
-  "StoredProcedures": {
-    "AddSeguro": "sp_Add_Seguro",
-    "EditSeguro": "sp_Edit_Seguro",
-    "DeleteSeguro": "sp_Delete_Seguro",
-    "GetByIdSeguro": "sp_GetById_Seguro",
-    "GetAllSeguro": "sp_GetAll_Seguro",
-    "AddCliente": "sp_Add_Cliente",
-    "EditCliente": "sp_Edit_Cliente",
-    "DeleteCliente": "sp_Delete_Cliente",
-    "GetByIdCliente": "sp_GetById_Cliente",
-    "GetAllCliente": "sp_GetAll_Cliente",
-    "AddAsegurada": "sp_Add_Asegurado",
-    "EditAsegurada": "sp_Edit_Asegurado",
-    "DeleteAsegurada": "sp_Delete_Asegurado",
-    "GetByIdAsegurada": "sp_GetById_Asegurado",
-    "GetAllAsegurada": "sp_GetAll_Asegurado",
-    "GetAllUsuario": "sp_GetAll_Usuario",
-    "GetByIdUsuario": "sp_GetById_Usuario",
-    "AddUsuario": "sp_Add_Usuario",
-    "EditUsuario": "sp_Edit_Usuario",
-    "DeleteUsuario": "sp_Delete_Usuario",
-    "GetAllEstado": "sp_GetAll_Estado"
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7261"
   }
 }
