--- a/CSG_ADMINPRO.UI/appsettings.json
+++ b/CSG_ADMINPRO.UI/appsettings.json
@@ -6,7 +6,15 @@
     }
   },
   "AllowedHosts": "*",
+
   "ApiSettings": {
-    "BaseUrl": "https://localhost:7261"
+    "BaseUrl": "https://localhost:7261/api/",
+    "Endpoints": {
+      "Clientes": "cliente",
+      "Seguros": "seguros",
+      "Polizas": "polizas",
+      "Asegurados": "asegurados"
+    }
   }
+
 }
