--- a/CSG_ADMINPRO.UI/CSG_ADMINPRO.UI.csproj
+++ b/CSG_ADMINPRO.UI/CSG_ADMINPRO.UI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SeriLog" Version="4.0.0" />
   </ItemGroup>
 
